--- a/BikeShopWebsite/resources/log4j.properties
+++ b/BikeShopWebsite/resources/log4j.properties
@@ -1,5 +1,5 @@
 # This sets the global logging level and specifies the appenders
-log4j.rootLogger=DEBUG, theConsoleAppender
+log4j.rootLogger=INFO, theConsoleAppender
 
 # settings for the console appender
 log4j.appender.theConsoleAppender=org.apache.log4j.ConsoleAppender
