--- a/BikeShopWebsite/pom.xml
+++ b/BikeShopWebsite/pom.xml
@@ -99,5 +99,12 @@
 			<artifactId>hibernate-c3p0</artifactId>
 			<version>3.6.3.Final</version>
 		</dependency>
+
+		<dependency>
+			<groupId>jstl</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
+
 	</dependencies>
 </project>
