--- a/BikeShopWebsite/WebContent/WEB-INF/web.xml
+++ b/BikeShopWebsite/WebContent/WEB-INF/web.xml
@@ -4,4 +4,18 @@
     <exception-type>java.lang.Throwable</exception-type>
     <location>/ExceptionHandlerController</location>
   </error-page>
+  
+     <servlet>
+        <servlet-name>Jersey Web Application</servlet-name>
+        <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
+        <init-param>
+            <param-name>jersey.config.server.provider.packages</param-name>
+            <param-value>service</param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+  <servlet-mapping>
+        <servlet-name>Jersey Web Application</servlet-name>
+        <url-pattern>/webapi/*</url-pattern>
+  </servlet-mapping>
 </web-app>
