--- a/BikeShopWebsite/WebContent/WEB-INF/web.xml
+++ b/BikeShopWebsite/WebContent/WEB-INF/web.xml
@@ -6,13 +6,20 @@
   </error-page>
   
   <servlet>
-      <servlet-name>Jersey Web Application</servlet-name>
-      <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
-      <init-param>
-          <param-name>jersey.config.server.provider.packages</param-name>
-          <param-value>service</param-value>
-      </init-param>
-      <load-on-startup>1</load-on-startup>
+    <servlet-name>Jersey Web Application</servlet-name>
+    <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
+    <!-- where to look for web service classes -->
+    <init-param>
+      <param-name>com.sun.jersey.config.property.packages</param-name>
+      <param-value>service</param-value>
+    </init-param>
+
+    <init-param>
+		<param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
+		<param-value>true</param-value>
+	</init-param>
+
+    <load-on-startup>1</load-on-startup>
   </servlet>
   <servlet-mapping>
         <servlet-name>Jersey Web Application</servlet-name>
